Shut down ParallelTeam instances in Complex3DParallelTest and Real3DParallelTest; Shut down the ParallelTeam that creates the vacuum N^2 neighbor-list in ParticleMeshEwald